feat(User): 사용자 입력 유효성 판단, 올바른 사용자 입력값 List 반환 기능 구현